# ai-knowledge-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  chat_client.html  docker-compose.yml  install.py  pyproject.toml  requirements.txt  setup.py  setup.sh  streaming_test.html
.github/: copilot-instructions.md
docs/: API_TESTING.md  CONTRIBUTING.md  DEPLOYMENT.md  VECTOR_DB_GUIDE.md
examples/: advanced_usage.py  basic_usage.py
src/: __init__.py
src/ai_assistant/: __init__.py  document_processor.py
src/api/: __init__.py  cli.py  main.py
src/config/: __init__.py  settings.py
src/vector_db/: __init__.py  base.py  factory.py  faiss_store.py  pinecone_store.py  weaviate_store.py
tests/: conftest.py  test_assistant.py
